@@ -4,6 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
+* Make sure that the Next button is the default if a step is submitted by
+  pressing enter.
 
 1.0 (2010-01-19)
 ----------------
